# agy-swarms

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE-MIT  Makefile  NOTICE  README.md  plugin.json  pyproject.toml
.github/: branch-protection.json  dependabot.yml
agy_swarms/: __init__.py  blackboard.py  budget.py  canonical.py  checkpoint.py  cli.py  codex_models.py  conductor.py  conductor_accounting.py  conductor_adapters.py  conductor_budget.py  conductor_checkpointing.py  conductor_codex_batch.py  conductor_commands.py  conductor_dispatch.py  conductor_drift.py  conductor_fallback.py  conductor_pipeline.py  conductor_reports.py  conductor_retry.py  conductor_review.py  conductor_review_budget.py  gates.py  graph_equivalence.py  graph_io.py  graph_store.py  handoff.py  hybrid_review.py  live_planner_metrics.py  local_runner.py  lockfile.py  main.py  model_routing.py  phase2_exit.py  planner.py  preflight.py  profiling.py  reducers.py  reporting.py  review_benchmark.py  (+12 more)
benchmarks/: ao2-baseline.md  benchmark_review_routing.py  factory-v3-baseline.md  judge_rubric.md  opus-baseline.json  phase5_benchmark_manifest.json  reference_task.md  review_routing_performance.md  review_seeded_cases.json  router_cases.json
cli/: __init__.py
commands/: agy-inspect.md  agy-preflight.md  agy-resume.md  agy-review-route.md  agy-run.md
config/: defaults.toml
docs/: architecture.md  archive-handoff.md  branch-protection.md  codex-batch-checkpoint-journal.md  dependency-updates.md  pr2-merge-checklist.md  release-operator-checklist.md  versioning.md  (+1 more)
(+288 files in other folders)
