[project]
name = "agy-swarms"
version = "0.5.4"
description = "Local typed task-graph runner for deterministic agent workflow execution."
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
gemini = [
    "google-genai>=2.8.0",   # Gemini API transport (FR-14); pin exact in agy.lock
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.16",
    "pre-commit>=3.5",
    "mypy>=1.10",
    "actionlint-py>=1.7.12.24",
]

[project.scripts]
agy-swarms = "agy_swarms.main:main"   # thin CLI over the engine library (FR-28)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agy_swarms"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
